syntax = "proto3";

package pb;

import "collection.proto";
option go_package = "github.com/techschool/simplebank/pb";

message ListCollectionRequest {
    int32 page_id = 1;
    int32 page_size = 2;
}

message ListCollectionResponse {
    repeated Collection collection = 1;
    string next_page_token = 2;
}